Add Firebase config for leaderboard

--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@ QUICK START
    - Add this near the top of the <body> or <head>:
      <script>
        window.FIREBASE_CONFIG = {
-         databaseURL: "https://<your-db-name>.firebaseio.com" // or .firebasedatabase.app
+           apiKey: "AIzaSyAOCDHQZUwDwlmFbTNx496j6lGxb8VkZ7o",
+           authDomain: "signal-showdown-leaderboard.firebaseapp.com",
+           databaseURL: "https://signal-showdown-leaderboard-default-rtdb.firebaseio.com",
+           projectId: "signal-showdown-leaderboard",
+           storageBucket: "signal-showdown-leaderboard.firebasestorage.app",
+           messagingSenderId: "277134526598",
+           appId: "1:277134526598:web:2d69fb84d7296bbb3d6907"
        };
      </script>
    - Open the Firebase console → Build → Realtime Database → Create database
@@ -1489,3 +1495,4 @@ setInterval(()=>{
 </script>
 </body>
 </html>
+
